substrate/frame/support/test/tests/pallet_ui/attribute_macros_deny_parameters.stderr
error: expected a path starting with `::`, e.g., `(::IDENTIFIER)` or `(::function_name())`
  --> tests/pallet_ui/attribute_macros_deny_parameters.rs:25:22
   |
25 |         #[pallet::constant(Hello)]
   |                            ^^^^^
